chore(android): #6 jacoco 根 buildscript + 5 份文档同步 + #8 SETUP.md 整段重写
【#6 根 build.gradle.kts + .gitignore】
- 根 build.gradle.kts 加 buildscript.dependencies.classpath("org.jacoco:org.jacoco.core:0.8.12")
  app/build.gradle.kts 用 apply(plugin = "org.gradle.jacoco") 引用。详细
  排除清单（11 条 KSP/Hilt/Room stub）、JacocoReport 自定义任务、packaging.jniLibs
  已在 commit 4 (feat/data) 落地。
- .gitignore 加 .scratch/（构建日志 / 临时 patch 文件不上 git）

【#8 SETUP.md 整段重写】
- 旧版只列了"需 JDK 17"，没提命令行构建挂在 androidJdkImage 的根因
- 新版：A/B 实测 JDK 26 vs JBR 25 表格 + 两种修法（JAVA_HOME 环境变量 / gradle.properties）
  + 阶段 2/3 真实踩坑案例

【5 份文档同步】
- docs/PHASES.md：欠账表 #4#5#6 标完成（#5 部分），阶段 3 验收 +3 行（#4 / #6 / #5 部分）
- docs/CHANGELOG.md：v0.1.0 段加 #4#5#6#7#8 + 真 bug（progress 0-100 量纲字节码证据）
  + 已知问题段更新（剩 #5 真机 adb install）
- docs/REUSE-MAP.md：core/models.py 标阶段 3 补齐（Progress 字段全）
- README.md：64 → 99、5 笔 → 7 笔、欠账 3 → 1（真机 adb install）
- docs/phases/phase-3.md（17333 bytes）：阶段 3 整篇复盘
  - UI 框架改动表 + 桌面版映射 + 5 条设计决定 + 验收
  - 5 笔已还欠账逐笔详解（含代码片段与桌面版语义对比表）
  - 3 坑 + 5 决策、测试变化表（46→64→99）、复盘清单
  - 6. 阶段 3 收尾补记（事后追加 3 笔新还 + 1 真 bug）

【其他】
- docs/ARCHITECTURE.md / docs/phases/phase-1.md / docs/phases/phase-2.md：
  阶段 3 期间补的小修正（结构对齐实际代码）

[注解] jacoco 详细配置（apply plugin / JacocoTaskExtension / JacocoReport
/ packaging.jniLibs.useLegacyPackaging）与 libs.versions.toml 加 jacoco 已在
commit 4 落地。app/build.gradle.kts 跟 libs.versions.toml 是单次构建配置窗口，
hunk 拆跟 Room / proguard 主题混淆，commit message 注明划分。

[遗留] 阶段 3 写错过路径的孤儿目录 android/app/src/src/（里面是 BottomNavItem.kt
副本）不 commit——用户自删，git 也没跟踪它。Remove-Item 不可用，得用户手动
`rm -rf android/app/src/src/`。